--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -24,3 +24,8 @@ monitor:
 
 judge:
   execDir: D:\judgeTemp
+info:
+  name: host-2
+  supportlanguage: go,java
+  enabled: true
+  url: 192.168.0.168:8888
