--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -30,4 +30,4 @@ info:
   enabled: true
   url: 192.168.0.168:8888
 api:
-  managerServer: http://127.0.0.1:8000
+  managerserver: http://127.0.0.1:8000/api/judgeMachine/health
