解释型语言判题

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -34,3 +34,12 @@ language:
   - go version
   - python -V
   - pup -v
+executor:
+  - args: null
+    cmd: python
+    ext: py
+  - args:
+      - run
+    cmd: go
+    ext: go
+
